# guru_beginner_hw

./: README.md  conftest.py  test_google_search.py
lesson10/: conftest.py  test_with_allure.py
lesson11/: browser.json  conftest.py  test_form_fill_and_result.py
lesson11/utils/: attach.py
lesson12/: .gitignore  conftest.py  requirements.txt  test_form_fill_and_result.py
lesson12/utils/: attach.py
lesson13/: conftest.py  requirements.txt  test_form_fill_and_result.py
lesson13/notifications/: telegram.json
lesson14/: .env  README.md  conftest.py  requirements.txt  test_imba_shop.py  test_krispykreme.py
lesson14/classes/: PageClasses.py
lesson14/data/: ponchik_info.py
lesson14/notifications/: config.json
lesson14/products/: raspberry_pistachio_shell.py
lesson15/: conftest.py  site_classes.py  test_desktop_and_mobile.py
lesson16/: pyproject.toml
lesson17/: test_request_api.py
lesson18/: test_api_ui_shop.py
lesson19/: .env  project.py
lesson20/: .env.bstack  .env.emulator  .env.real  project.py  requirements.txt
lesson21/: .env  requirements.txt  test_github_userinfo_api.py
lesson22/: .env_example  README.md  requirements.txt
lesson3/: conftest.py  test_google_search.py
lesson4/: test_homework_lesson4.py
lesson5/: conftest.py  test_form_fill_and_result.py
lesson6/: test_python_false_true.py
lesson7/: conftest.py  test_zip_file.py  xlsx.xlsx
lesson8/: models.py  test_shop.py
lesson9_1/: browser_classes.py  test_form_fill_and_result.py
lesson9_2/: form_classes.py  students.py  test_form_fill_and_result.py
(+29 files in other folders)
